syntax = "proto3";
package abag.quasarnode.qbank;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "qbank/params.proto";
import "qbank/deposit.proto";
import "qbank/withdraw.proto";
 import "qbank/common.proto";
// this line is used by starport scaffolding # 1
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/abag/quasarnode/x/qbank/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/abag/quasarnode/qbank/params";
  }
 
// Queries a list of UserDenomDeposit items.
	rpc UserDenomDeposit(QueryUserDenomDepositRequest) returns (QueryUserDenomDepositResponse) {
		option (google.api.http).get = "/abag/quasarnode/qbank/user_denom_deposit/{userAcc}";
	}

 
 
// Queries a list of UserDeposit items.
	rpc UserDeposit(QueryUserDepositRequest) returns (QueryUserDepositResponse) {
		option (google.api.http).get = "/abag/quasarnode/qbank/user_deposit/{userAcc}";
	}
 
  


// Queries a list of UserClaimRewards items.
	rpc UserClaimRewards(QueryUserClaimRewardsRequest) returns (QueryUserClaimRewardsResponse) {
		option (google.api.http).get = "/abag/quasarnode/qbank/user_claim_rewards/{userAcc}";
	}

// Queries a list of Withdrable items.
	rpc Withdrable(QueryWithdrableRequest) returns (QueryWithdrableResponse) {
		option (google.api.http).get = "/abag/quasarnode/qbank/withdrable/{userAccount}/{denom}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}
  
message QueryUserDenomDepositRequest {
  string userAcc = 1;
  string denom = 2;
}

message QueryUserDenomDepositResponse {
	uint64 amount = 1;
}
 

message QueryUserDepositRequest {
  string userAcc = 1;
}

message QueryUserDepositResponse {
	QCoins coins  = 1 
	[(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/abag/quasarnode/x/qbank/types.QCoins"]; 
}
 
  
 
message QueryUserClaimRewardsRequest {
  string userAcc = 1;
}

message QueryUserClaimRewardsResponse {
	QCoins coins  = 1 
	[(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/abag/quasarnode/x/qbank/types.QCoins"]; 
}

message QueryWithdrableRequest {
  string userAccount = 1;
  string denom = 2;
}

message QueryWithdrableResponse {
  cosmos.base.v1beta1.Coin coin = 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3
